Script editing (#907)
* feat: dropper scripting sketching

* feat: initial refactor lua slopgen to a parse and emit structure

* chore: initial type processing

* chore: generate some docs, kinda bad tho will need thorough audit

* chore: idk

* chore: lots of luau slopgen cleanup

* chore: more lua typegen slop

* chore: add new file endpoints

* chore: working draft from editor

* chore: initial factoring/cleanup

* chore: lots of scripting cleanup

* feat: update test module and update map world tests for scripting

also updates gradle, cleans up some tests, drops the local module (always broken kinda dnc)

* feat: luau union type/doc generation

* chore: entity -> prop

* chore: simplify lua generation and move to module dedicated to map-runtime.

we are not going to expose this as a library, and its a fine constraint to require all apis to be defined in map-runtime imo. Simplifies the code quite a lot.

* feat: in-generator type functions

Adds $Writable to select writable fields from another type as a new type.

Additionally a consistency fix for generated type naming

* chore: convert some warnings to errors in generated lua api comments

* chore: initial support for manually "untracking" disposables

* feat: enum support in lua gen

* chore: more enum & fixes for bonking

* feat: first draft of bundle logic to precompile scripts and bundle into a zip to load

* feat: hub load precompiled bundle

* chore: hide script command behind HAS_SCRIPT_BUNDLE map setting, other minor cleanup